Movimineto del carro y detenerse

--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de semaforo</title>
-    h
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ball Game</title>
+<style>
+    #gameArea {
+        width: 600px;
+        height: 700px;
+        border: 1px solid black;
+        position: relative;
+    }
+
+    .carro {
+        width: 30px;
+        height: 30px;
+        background-color: red;
+        border-radius: 50%;
+        position: absolute;
+    }
+</style>
 </head>
 <body>
-    
+
+<div id="gameArea"></div>
+<script src="JS/main.js"></script>
 </body>
 </html>
