--- a/Index.html
+++ b/Index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ingles">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ball Game</title>
+<title>Simulador de semaforo</title>
 <style>
-    #gameArea {
-        width: 600px;
-        height: 700px;
+    #carretera {
+        width: 50px;
+        height: 800px;
+        left: 400px;
         border: 1px solid black;
         position: relative;
     }
 
-    .carro {
+    .car {
         width: 30px;
         height: 30px;
         background-color: red;
@@ -23,7 +24,9 @@
 </head>
 <body>
 
-<div id="gameArea"></div>
-<script src="JS/main.js"></script>
+<div id="carretera"></div>
+
+   <script src="j.js"></script>
+
 </body>
 </html>
