Correcion de errores y se agrego el semaforo

--- a/Index.html
+++ b/Index.html
@@ -9,10 +9,19 @@
         width: 50px;
         height: 800px;
         left: 400px;
+        top:-20px;
         border: 1px solid black;
         position: relative;
     }
-
+    #circle {
+        width: 20px;
+        height: 20px;
+        left: 460px;
+        top:430px;
+        border-radius: 50%;
+        background-color: green; /* Inicialmente verde */
+        position: relative;
+    }
     .car {
         width: 30px;
         height: 30px;
@@ -24,9 +33,10 @@
 </head>
 <body>
 
+
+<div id="circle"></div>
 <div id="carretera"></div>
-
-   <script src="j.js"></script>
-
+<script src="JS/main.js"></script>
+<script src="JS/semaforo.js"></script>
 </body>
 </html>
