--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ingles">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Simulador de semaforo</title>
+<title>Simulador de semáforo</title>
 <style>
     #carretera {
         width: 50px;
@@ -33,10 +33,8 @@
 </head>
 <body>
 
-
 <div id="circle"></div>
 <div id="carretera"></div>
 <script src="JS/main.js"></script>
-<script src="JS/semaforo.js"></script>
 </body>
 </html>
