--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
         width: 30px;
         height: 30px;
         background-color: red;
-        border-radius: 50%;
+        /* border-radius: 50%; */
         position: absolute;
     }
 </style>
