--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,6 @@
 <title>Simulador de semáforo</title>
 <style>
     #carretera {
-        width: 50px;
-        height: 800px;
-        left: 400px;
         top:-20px;
         border: 1px solid black;
         position: relative;
@@ -26,7 +23,6 @@
         width: 30px;
         height: 30px;
         background-color: red;
-        /* border-radius: 50%; */
         position: absolute;
     }
 </style>
@@ -35,6 +31,7 @@
 
 <div id="circle"></div>
 <div id="carretera"></div>
+<div id="carretera2"></div>
 <script src="JS/main.js"></script>
 </body>
 </html>
