con dos careteras

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Simulador de semáforo</title>
 <style>
-    #carretera {
+    .carretera {
         top:-20px;
         border: 1px solid black;
         position: relative;
@@ -30,8 +30,8 @@
 <body>
 
 <div id="circle"></div>
-<div id="carretera"></div>
-<div id="carretera2"></div>
+<div class="carretera" id="carretera1"></div>
+<div class="carretera" id="carretera2"></div>
 <script src="JS/main.js"></script>
 </body>
 </html>
